--- a/arch/arm64/configs/ugglite_defconfig
+++ b/arch/arm64/configs/ugglite_defconfig
@@ -89,6 +89,7 @@ CONFIG_TICK_ONESHOT=y
 CONFIG_NO_HZ_COMMON=y
 # CONFIG_HZ_PERIODIC is not set
 CONFIG_NO_HZ_IDLE=y
+CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
 # CONFIG_NO_HZ_FULL is not set
 CONFIG_NO_HZ=y
 CONFIG_HZ_100=y
