--- a/arch/arm64/configs/ugglite_defconfig
+++ b/arch/arm64/configs/ugglite_defconfig
@@ -4149,6 +4149,7 @@ CONFIG_EXFAT_DISCARD=y
 CONFIG_EXFAT_DEFAULT_CODEPAGE=437
 CONFIG_EXFAT_DEFAULT_IOCHARSET="utf8"
 CONFIG_NTFS_FS=y
+CONFIG_SDFAT_FS=y
 # CONFIG_NTFS_DEBUG is not set
 # CONFIG_NTFS_RW is not set
 
