ugglite: defconfig: disable debugging

--- a/arch/arm64/configs/ugglite_defconfig
+++ b/arch/arm64/configs/ugglite_defconfig
@@ -243,11 +243,11 @@ CONFIG_HAVE_CMPXCHG_DOUBLE=y
 CONFIG_ARCH_WANT_COMPAT_IPC_PARSE_VERSION=y
 CONFIG_HAVE_ARCH_SECCOMP_FILTER=y
 CONFIG_SECCOMP_FILTER=y
-CONFIG_HAVE_CC_STACKPROTECTOR=y
-CONFIG_CC_STACKPROTECTOR=y
-# CONFIG_CC_STACKPROTECTOR_NONE is not set
+# CONFIG_HAVE_CC_STACKPROTECTOR is not set
+# CONFIG_CC_STACKPROTECTOR is not set
+CONFIG_CC_STACKPROTECTOR_NONE=y
 # CONFIG_CC_STACKPROTECTOR_REGULAR is not set
-CONFIG_CC_STACKPROTECTOR_STRONG=y
+# CONFIG_CC_STACKPROTECTOR_STRONG is not set
 CONFIG_HAVE_CONTEXT_TRACKING=y
 CONFIG_HAVE_VIRT_CPU_ACCOUNTING_GEN=y
 CONFIG_HAVE_IRQ_TIME_ACCOUNTING=y
@@ -478,8 +478,8 @@ CONFIG_SETEND_EMULATION=y
 #
 # ARMv8.1 architectural features
 #
-CONFIG_ARM64_PAN=y
-CONFIG_ARM64_UAO=y
+# CONFIG_ARM64_PAN is not set
+# CONFIG_ARM64_UAO is not set
 
 #
 # Boot options
@@ -529,7 +529,6 @@ CONFIG_PM_SLEEP_DEBUG=y
 # CONFIG_DPM_WATCHDOG is not set
 CONFIG_PM_OPP=y
 CONFIG_PM_CLK=y
-# CONFIG_WQ_POWER_EFFICIENT_DEFAULT is not set
 CONFIG_CPU_PM=y
 CONFIG_SUSPEND_TIME=y
 # CONFIG_DEDUCE_WAKEUP_REASONS is not set
@@ -1970,7 +1969,7 @@ CONFIG_SERIAL_MSM_SMD=y
 #
 # Diag Support
 #
-CONFIG_DIAG_CHAR=y
+# CONFIG_DIAG_CHAR is not set
 
 #
 # DIAG traffic over USB
@@ -4332,9 +4331,9 @@ CONFIG_PANIC_ON_RECURSIVE_FAULT=y
 # CONFIG_SCHED_DEBUG is not set
 # CONFIG_PANIC_ON_SCHED_BUG is not set
 # CONFIG_PANIC_ON_RT_THROTTLING is not set
-CONFIG_SCHEDSTATS=y
+# CONFIG_SCHEDSTATS is not set
 # CONFIG_SCHED_STACK_END_CHECK is not set
-CONFIG_TIMER_STATS=y
+# CONFIG_TIMER_STATS is not set
 CONFIG_DEBUG_PREEMPT=y
 
 #
